Chess Club/src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <formula>Subscription_Year__r.Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liable_Memberships__c</fullName>
        <label>Liable Memberships</label>
        <summarizedField>Membership__c.Fee_Factor__c</summarizedField>
        <summaryFilterItems>
            <field>Membership__c.Fee_Waived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Membership__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paid_Up__c</fullName>
        <formula>Total_Received__c &gt;=  Total_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <formula>Subscriber__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Year__c</fullName>
        <label>Subscriber Year</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Registration</label>
        <referenceTo>Supervisor__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Year__c</fullName>
        <label>Subscription Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <formula>MIN( Subscription_Year__r.Maximum_Subscription_Fee__c, Subscription_Year__r.Membership_Fee__c *  Liable_Memberships__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Received__c</fullName>
        <label>Total Received</label>
        <summarizedField>Receipt__c.Amount__c</summarizedField>
        <summaryForeignKey>Receipt__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Subscription_Year__c</columns>
        <columns>NAME</columns>
        <columns>Subscriber_Name__c</columns>
        <columns>Current__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{0}</displayFormat>
        <label>Subscription#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>